# Copyright (c) 2023 Andrea Ballestrazzi

set(GC_FOLDER_PROVIDER_SOURCE_FILES)
set(GC_FOLDER_PROVIDER_HEADER_FILES)

add_library(gc_folder_provider STATIC ${GC_FOLDER_PROVIDER_SOURCE_FILES} ${GC_FOLDER_PROVIDER_HEADER_FILES})
target_include_directories(gc_folder_provider PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}/include)

set_target_properties(gc_folder_provider PROPERTIES
    PROPERTIES
    ARCHIVE_OUTPUT_DIRECTORY ${PRODUCTION_LIB_COMPILATION_OUTPUT_DIR}
    LIBRARY_OUTPUT_DIRECTORY ${PRODUCTION_LIB_COMPILATION_OUTPUT_DIR}
    RUNTIME_OUTPUT_DIRECTORY ${PRODUCTION_EXE_COMPILATION_OUTPUT_DIR}
    LINKER_LANGUAGE CXX
)

if(GC_USE_PLATFORM_FOLDERS)
    target_link_libraries(gc_folder_provider PRIVATE gc_platform_folders)
endif()
